# sdcv

./: .clang-format  .travis.yml  CMakeLists.txt  Cargo.toml  ChangeLog  LICENSE  Makefile.in  NEWS  README  README.org  config.h.in  configure  configure.ac  fr.po  index.html  params.json
.github/workflows/: main.yml
cmake/: FindGettextTools.cmake  compiler.cmake
doc/: Makefile.am  sdcv.1
doc/uk/: Makefile.am  sdcv.1
m4/: Makefile.in  readline.m4
po/: LINGUAS  Makevars  cs.po  fr.po  ka.po  ru.gmo  ru.po  sdcv.pot  sk.gmo  sk.po  uk.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
src/: core.rs  data.rs  dictziplib.cpp  dictziplib.hpp  distance.cpp  distance.hpp  index.rs  libwrapper.cpp  libwrapper.hpp  main.rs  mapfile.hpp  mem_mapped_file.rs  readline.cpp  readline.hpp  sdcv.cpp  stardict_lib.cpp  stardict_lib.hpp  utils.cpp  utils.hpp
src/lib/: Makefile.am  Makefile.in  distance.cpp  distance.h  file.cpp  file.hpp  lib.cpp  lib.h  lib.hpp  mapfile.hpp
tests/: call_stardict_strcmp.cpp  generate_strings_pairs.py  stardict_strcmp_test_data_cmp_exp.txt  t_datadir  t_exact  t_interactive  t_json  t_list  t_multiple_results  t_newlines_in_ifo  t_only_data_dir  t_return_code  t_synonyms  t_use  t_utf8input  t_utf8output
tests/not-unix-newlines-ifo/russian/: russian.ifo
tests/rus-eng-stardict-2.4.2/: 1.xdxf.dict  1.xdxf.idx  1.xdxf.idx.oft  1.xdxf.ifo
tests/stardict-test_dict-2.4.2/: Makefile.in  test_dict.dict  test_dict.ifo
tests/stardict-test_multiple_results-2.4.2/: test.dict  test.idx  test.ifo  test.syn
tests/stardict-test_synonyms-2.4.2/: test.dict.dz  test.idx  test.idx.oft  test.ifo  test.syn  test.xml
tests/words_dic/: gen_dic_from_words.py
tests/words_dic/stardict-words-2.4.2/: words.idx.oft  words.ifo
trunk/: AUTHORS  BUGS  CMakeLists.txt  Makefile.am  NEWS  TODO  aclocal.m4  config.h.cmake  config.h.in  configure.ac  configure.in
trunk/cmake/: FindGLIB2.cmake  FindLibintl.cmake
trunk/cmake/FindGettextTools/: config.cmake.in  script.cmake
trunk/doc/: DICTFILE_FORMAT  HACKING  Makefile.in
trunk/doc/uk/: Makefile.in  sdcv.1
trunk/mvsc/: stardict-mvsc.vcproj  texthook.vcproj  textoutspy.vcproj
trunk/po/: LINGUAS  POTFILES.in  cs.gmo  cs.po  de.gmo  el.gmo  fr.gmo  hr.gmo  hu.gmo  ku.gmo  mk.gmo  nl.gmo  pt_BR.gmo  ru.gmo  ru.po  sk.gmo  sk.po  tt.gmo  uk.gmo  uk.po  vi.gmo  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
trunk/src/: Makefile.am  Makefile.in  conf.cpp  conf.h  config_file.hpp  dictziplib.cpp  docklet.cpp  docklet.h  eggtrayicon.h  floatwin.cpp  gconf_file.cpp  gconf_file.hpp  inifile.cpp  inifile.hpp  libwrapper.cpp  libwrapper.hpp  mainwin.cpp  mainwin.h  prefsdlg.cpp  readline.cpp  readline.hpp  sdcv.cpp  skin.cpp  skin.h  stardict.cpp  stardict.h  stardict_lib.cpp  stardict_lib.hpp  trayicon.hpp  utils.cpp  utils.h  utils.hpp
trunk/src/lib/: dictziplib.cpp  dictziplib.hpp  distance.cpp  file.hpp  kmp.c  lib.cpp  lib.h  lib.hpp  mapfile.hpp  my_global.h  stddict.hpp
trunk/src/win32/: GetWord.c  HookImportFunction.c  TextOutHook.c  hotkey.cpp  stardictrc.rc  systray.cpp  systray.h
trunk/tests/: Makefile.am  Makefile.in  t_config_file.cpp  t_datadir  t_interactive  t_list  t_trayicon.cpp  t_use  t_utf8input  t_utf8output
trunk/tests/stardict-test_dict-2.4.2/: Makefile.am  test_dict.idx
